--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,24 +55,10 @@ targets = [
 [features]
 android-game-activity = ["android-activity/game-activity"]
 android-native-activity = ["android-activity/native-activity"]
-default = ["rwh_06", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]
+default = ["rwh_06"]
 mint = ["dpi/mint"]
-rwh_06 = ["dep:rwh_06", "ndk/rwh_06"]
+rwh_06 = ["dep:rwh_06", "dep:gdk-x11", "dep:gdk-wayland", "dep:wayland-backend", "ndk/rwh_06"]
 serde = ["dep:serde", "cursor-icon/serde", "smol_str/serde", "dpi/serde", "bitflags/serde"]
-wayland = [
-    "wayland-client",
-    "wayland-backend",
-    "wayland-protocols",
-    "wayland-protocols-plasma",
-    "sctk",
-    "ahash",
-    "memmap2",
-]
-wayland-csd-adwaita = ["sctk-adwaita", "sctk-adwaita/ab_glyph"]
-wayland-csd-adwaita-crossfont = ["sctk-adwaita", "sctk-adwaita/crossfont"]
-wayland-csd-adwaita-notitle = ["sctk-adwaita"]
-wayland-dlopen = ["wayland-backend/dlopen"]
-x11 = ["x11-dl", "bytemuck", "percent-encoding", "xkbcommon-dl/x11", "x11rb"]
 
 [build-dependencies]
 cfg_aliases = "0.2.1"
@@ -232,40 +218,50 @@ windows-sys = { version = "0.52.0", features = [
 
 # Linux
 [target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_vendor = "apple"))))'.dependencies]
-ahash = { version = "0.8.7", features = ["no-rng"], optional = true }
-bytemuck = { version = "1.13.1", default-features = false, optional = true }
+# ahash = { version = "0.8.7", features = ["no-rng"], optional = true }
+# bytemuck = { version = "1.13.1", default-features = false, optional = true }
 calloop = "0.13.0"
-libc = "0.2.64"
-memmap2 = { version = "0.9.0", optional = true }
-percent-encoding = { version = "2.0", optional = true }
-rustix = { version = "0.38.4", default-features = false, features = [
-    "std",
-    "system",
-    "thread",
-    "process",
+# libc = "0.2.64"
+# memmap2 = { version = "0.9.0", optional = true }
+# percent-encoding = { version = "2.0", optional = true }
+# rustix = { version = "0.38.4", default-features = false, features = [
+#     "std",
+#     "system",
+#     "thread",
+#     "process",
+# ] }
+# sctk = { package = "smithay-client-toolkit", version = "0.19.2", default-features = false, features = [
+#     "calloop",
+# ], optional = true }
+# sctk-adwaita = { version = "0.10.1", default-features = false, optional = true }
+# wayland-backend = { version = "0.3.5", default-features = false, features = [
+#     "client_system",
+# ], optional = true }
+# wayland-client = { version = "0.31.4", optional = true }
+# wayland-protocols = { version = "0.32.2", features = ["staging"], optional = true }
+# wayland-protocols-plasma = { version = "0.3.2", features = ["client"], optional = true }
+# x11-dl = { version = "2.19.1", optional = true }
+# x11rb = { version = "0.13.0", default-features = false, features = [
+#     "allow-unsafe-code",
+#     "cursor",
+#     "dl-libxcb",
+#     "randr",
+#     "resource_manager",
+#     "sync",
+#     "xinput",
+#     "xkb",
+# ], optional = true }
+# xkbcommon-dl = "0.4.2"
+
+# Adwaita
+# `libadwaita` is usually renamed to `adw`: <https://docs.rs/libadwaita>
+adw = { package = "libadwaita", version = "0.7.0", features = ["gtk_v4_2"] }
+gdk = { package = "gdk4", version = "0.9.2", features = ["v4_10"] }
+gdk-wayland = { package = "gdk4-wayland", version = "0.9.2", optional = true, features = [
+    "wayland_crate",
 ] }
-sctk = { package = "smithay-client-toolkit", version = "0.19.2", default-features = false, features = [
-    "calloop",
-], optional = true }
-sctk-adwaita = { version = "0.10.1", default-features = false, optional = true }
-wayland-backend = { version = "0.3.5", default-features = false, features = [
-    "client_system",
-], optional = true }
-wayland-client = { version = "0.31.4", optional = true }
-wayland-protocols = { version = "0.32.2", features = ["staging"], optional = true }
-wayland-protocols-plasma = { version = "0.3.2", features = ["client"], optional = true }
-x11-dl = { version = "2.19.1", optional = true }
-x11rb = { version = "0.13.0", default-features = false, features = [
-    "allow-unsafe-code",
-    "cursor",
-    "dl-libxcb",
-    "randr",
-    "resource_manager",
-    "sync",
-    "xinput",
-    "xkb",
-], optional = true }
-xkbcommon-dl = "0.4.2"
+gdk-x11 = { package = "gdk4-x11", version = "0.9.2", optional = true, features = ["xlib"] }
+wayland-backend = { version = "0.3.7", optional = true, features = ["client_system", "rwh_06"] }
 
 # Orbital
 [target.'cfg(target_os = "redox")'.dependencies]
