--- a/Cargo.toml
+++ b/Cargo.toml
@@ -261,6 +261,8 @@ gdk-wayland = { package = "gdk4-wayland", version = "0.9.2", optional = true, fe
     "wayland_crate",
 ] }
 gdk-x11 = { package = "gdk4-x11", version = "0.9.2", optional = true, features = ["xlib"] }
+glib = { version = "0.20.4" }
+gtk = { package = "gtk4", version = "0.9.2", features = ["v4_16"] }
 wayland-backend = { version = "0.3.7", optional = true, features = ["client_system", "rwh_06"] }
 
 # Orbital
